--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dataloader": "^2.2.2",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-graphql": "^0.12.0",
